# libntr

./: README.md  meson.build  meson.options
include/: nitro.h
include/nitro/: cht.h  code32.h  env.h  gx.h  ioreg.h  memorymap.h  misc.h  os.h  platform.h  snd.h  spi.h  types.h  utest.h  vib.h  wvr.h
include/nitro/card/: backup.h  pullOut.h  rom.h
include/nitro/cp/: divider.h  sqrt.h
include/nitro/ctrdg/common/: ctrdg_common.h
include/nitro/dgt/: dgt.h
include/nitro/env/: env_system.h
include/nitro/fs/: file.h  overlay.h
include/nitro/fx/: fx_cp.h
include/nitro/gx/: g2.h  g2_oam.h  g3.h  g3imm.h  g3x.h  gx.h  gx_bgcnt.h  gx_capture.h  gx_load.h  gx_sp.h
include/nitro/hw/X86/: armArch.h  ioreg.h  ioreg_CP.h  ioreg_EXI.h  ioreg_G2.h  ioreg_G2S.h  ioreg_G3.h  ioreg_G3X.h  ioreg_GX.h  ioreg_GXS.h  ioreg_MI.h  ioreg_OS.h  ioreg_PAD.h  ioreg_PXI.h  ioreg_SND.h  ioreg_SPI.h  lcd.h  mmap_global.h  mmap_main.h  mmap_shared.h  mmap_tcm.h
include/nitro/init/: crt0.h
include/nitro/mi/: dma.h  exMemory.h  init.h  memory.h  wram.h
include/nitro/os/common/: alarm.h  alloc.h  arena.h  context.h  init.h  interrupt.h  message.h  mutex.h  ownerInfo.h  printf.h  reset.h  spinLock.h  system.h  systemCall.h  systemWork.h  thread.h  timer.h
include/nitro/pad/common/: pad.h
include/nitro/pxi/common/: fifo.h  regname.h
include/nitro/snd/common/: alarm.h  bank.h  channel.h  command.h  exchannel.h  main.h  seq.h  util.h  work.h
include/nitro/spi/ARM7/: spi.h
include/nitro/spi/ARM9/: pm.h
include/nitro/spi/common/: pm_common.h
include/nitro/wm/ARM7/: wm_sp.h
include/nitro/wm/common/: wm.h
include/nitro_wl/ARM7/: WlBuf.h  WlCmd.h  WlCmdLabel.h  WlFrame.h  WlLib.h  WlParam.h  WlStaList.h  version_wl.h
include/simulator/: assert.h  drawmsg.h  g3_draw.h  g3_handler.h  gui.h  queue.h  sim.h  sim_audio.h  sim_debug.h  sim_net.h  sim_snd.h  simvariables.h  wmsp_indicate.h
include/simulator/config/: sim_config.h
include/simulator/glad/: glad.h
libraries/: meson.build
libraries/card/: meson.build
libraries/card/include/: card_common.h  card_rom.h
libraries/card/src/: card_backup.c  card_common.c  card_pullOut.c  card_request.c  card_rom.c
libraries/cht/: meson.build
libraries/cp/: meson.build
libraries/cp/src/: cp_context.c
libraries/ctrdg/: meson.build
libraries/ctrdg/src/: ctrdg.c  ctrdg_proc.c
libraries/dgt/: meson.build
libraries/dgt/src/: hash2.c  meson.build  sha1s-arm4cw.c
libraries/e3s/: meson.build
libraries/env/: meson.build
libraries/ext/: meson.build
libraries/fs/: meson.build
libraries/fs/src/: fs_archive.c  fs_file.c  fs_overlay.c
libraries/fx/: meson.build
libraries/fx/src/: fx.c  fx_cp.c  fx_mtx22.c  fx_mtx33.c  fx_mtx43.c  fx_mtx44.c
libraries/gx/: meson.build
libraries/gx/include/: gxasm.h
libraries/gx/src/: g2.c  g3_util.c  g3imm.c  g3x.c  gx.c  gx_bgcnt.c  gx_load2d.c  gx_load3d.c  gx_vramcnt.c  gxasm.c
libraries/init/: meson.build
libraries/init/src/: crt0.c
libraries/math/: meson.build
libraries/math/src/: checksum.c  dgt.c  qsort.c
libraries/mb/: meson.build
libraries/mb/src/: mb_child.c  mb_fileinfo.c  mb_parent.c  mb_wm_base.c
libraries/mi/: meson.build
libraries/mi/include/: mi_dma.h
libraries/mi/src/: mi_dma.c  mi_dma_gxcommand.c  mi_dma_hblank.c  mi_dma_vblank.c  mi_memory.c  mi_swap.c  mi_uncomp_stream.c  mi_uncompress.c  mi_wram.c
libraries/os/: meson.build
libraries/os/src/: os_alarm.c  os_alloc.c  os_arena.c  os_cache.c  os_china.c  os_context.c  os_emulator.c  os_entropy.c  os_exception.c  os_init.c  os_interrupt.c  os_irqHandler.c  os_irqTable.c  os_message.c  os_mutex.c  os_ownerInfo.c  os_printf.c  os_profile.c  os_protectionRegion.c  os_protectionUnit.c  os_reset.c  os_spinLock.c  os_system.c  os_tcm.c  os_terminate_proc.c  os_thread.c  os_tick.c  os_vramExclusive.c
libraries/prc/: meson.build
libraries/pxi/: meson.build
libraries/pxi/src/: pxi_fifo.c  pxi_init.c
libraries/rtc/: meson.build
libraries/rtc/src/: external.c
libraries/sim/: meson.build
libraries/sim/cimgui/: meson.build
libraries/sim/cimgui/imgui/: imconfig.h
libraries/sim/include/: screenquads.h  sim_g2.h  wmsp_mac.h  wmsp_private.h
libraries/sim/include/ARM7/: mic_sp.h  nvram_sp.h  pm_sp.h  spi_sp.h  tp_sp.h
libraries/sim/src/: g3_draw.c  g3_handler.c  g3_shader.c  glad.c  meson.build  queue.c  sim_assert.c  sim_audio.c  sim_debug.c  sim_g2.c  sim_main.c  sim_net.c  sim_screenquads.c
libraries/sim/src/config/: ini.c  sim_config.c
libraries/sim/src/gui/: gui.c  gui_config.c  gui_g2.c  gui_internal.h  gui_net.c  gui_os.c  gui_pad.c
libraries/sim7/: meson.build
libraries/sim7/include/: screenquads.h  wm_private.h  wmsp_mac.h  wmsp_private.h
libraries/sim7/include/ARM7/: mic_sp.h  nvram_sp.h  pm_sp.h  spi_sp.h  tp_sp.h
libraries/sim7/src/: meson.build  pxi.c
libraries/sim7/src/snd/: snd_channel.c  snd_exchannel.c  snd_midiplayer.c  snd_seq.c
libraries/sim7/src/spi/: spi_sp.c
libraries/sim7/src/spi/nvram/: nvram_instruction.c  nvram_sp.c
libraries/sim7/src/wm/: wmsp_indicate.c  wmsp_request.c  wmsp_system.c
libraries/snd/: meson.build
libraries/snd/src/: snd_alarm.c  snd_bank.c  snd_command.c  snd_interface.c  snd_main.c  snd_util.c  snd_work.c
libraries/spi/: meson.build
libraries/spi/src/: mic.c  pm.c  tp.c
libraries/std/: meson.build
libraries/stubs/cw/: meson.build
libraries/stubs/cw/src/: interworking.c
libraries/stubs/isd/: meson.build
libraries/utest/: meson.build
libraries/utest/src/: utest_cui.c
libraries/wbt/: meson.build
libraries/wfs/: meson.build
libraries/wm/: meson.build
libraries/wm/src/: wm_etc.c  wm_mp.c  wm_private.h  wm_standard.c  wm_sync.c  wm_system.c
libraries/wvr/: meson.build
libraries/wvr/src/: wvr.c
tools/makelcf/: createlcf.c
