option('mwrap_ver', type: 'string', value: 'default', description: 'Version of Metrowerks toolchain to use')
option('mwrap_sdk', type: 'string', value: 'default', description: 'Version of Metrowerks libraries to use')
option('sp1p3_conditionals', type: 'boolean', value: false)
option('build_target', type: 'combo', choices: ['arm', 'win64', 'linux', 'nx'], value: 'arm', description: 'Target build platform', yield: true)
option('tracy_enable' , type : 'boolean' , value : false, description : 'Enable profiling', yield: true)
